fix theme preview z-index

--- a/assets/styles/themes.css
+++ b/assets/styles/themes.css
@@ -163,6 +163,7 @@
 }
 
 .live-preview .live-wrapp {
+	z-index: 4;
 	display: none;
 	position: fixed;
 	top: 20px;
